# ImageProcessing

./: CMakeLists.txt  imageprocessing.cpp  imageprocessing.h  imageprovider.cpp  imageprovider.h  main.cpp  main.qml  qml.qrc
Filters/: borderhighlight.cpp  borderhighlight.h  filters.cpp  filters.h  gaussfilter.cpp  gaussfilter.h  meanfilter.cpp  meanfilter.h  medianfilter.cpp  medianfilter.h
Tools/: chanvese.cpp  chanvese.h  hand.cpp  hand.h  pen.cpp  pen.h  smartbrush.cpp  smartbrush.h  smartrefinement.cpp  smartrefinement.h  tools.cpp  tools.h  zoom.cpp  zoom.h
Utils/: maskpoint.h  matrix.h
